# ScanCamera

./: CMakeLists.txt  README.md  main.cpp
lib/: scan.cpp  scan.h  scane.cpp  scane.h
